// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Container /> error state 1`] = `
<div>
  <Message
    status="error"
  />
</div>
`;

exports[`<Container /> getSearchResult should fetch data 1`] = `
Object {
  "data": Object {
    "resultCount": 1,
    "results": Array [
      Object {
        "artworkUrl100": "",
        "description": "",
        "trackId": "1",
        "trackName": "",
        "trackPrice": 0.99,
      },
    ],
  },
  "status": "",
}
`;

exports[`<Container /> init state 1`] = `
<div>
  <Message
    status="init"
  />
</div>
`;

exports[`<Container /> loading state 1`] = `
<div>
  <Message
    status="loading"
  />
</div>
`;

exports[`<Container /> no search results state 1`] = `
<div>
  <Message
    status="noContent"
  />
</div>
`;

exports[`<Container /> should set error state if there is a fetch error 1`] = `
Object {
  "data": Object {},
  "status": "error",
}
`;

exports[`<Container /> show data 1`] = `
<div>
  <List
    resultCount={2}
    results={
      Array [
        Object {
          "trackName": "test1",
        },
        Object {
          "trackName": "test2",
        },
      ]
    }
  />
</div>
`;
